Closed Bug 1883513 Opened 4 months ago Closed 4 months ago

layout/style/nsMediaFeatures.cpp:252:4: error: "Unknown platform?"

Categories

(Toolkit :: Themes, defect)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Building with --enable-project=mobile/ios fails with, among other things:

/tmp/gecko-ios/layout/style/nsMediaFeatures.cpp:252:4: error: "Unknown platform?"
  252 | #  error "Unknown platform?"
      |    ^

The case matches that of mozilla::widget::OperatingSystem.

Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/ad95bc398ff3
Add iOS as a style platform. r=emilio
Status: NEW → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: