Bug 1883513 - Add iOS as a style platform. r=emilio

The case matches that of mozilla::widget::OperatingSystem.

Differential Revision: https://phabricator.services.mozilla.com/D203531