layout/style/nsMediaFeatures.cpp
@@ -248,6 +248,9 @@ bool Gecko_MediaFeatures_MatchesPlatform(StylePlatform aPlatform) {
 #elif defined(XP_MACOSX)
     case StylePlatform::Macos:
       return true;
+#elif defined(XP_IOS)
+    case StylePlatform::Ios:
+      return true;
 #else
 #  error "Unknown platform?"
 #endif
